# model-arena

./: .gitignore  CLAUDE.md  README.md  models.yaml  pyproject.toml
model_arena/: __init__.py  bandit.py  config.py  judge.py  pool.py  stats.py  storage.py  types.py
tests/: conftest.py  test_bandit.py  test_config.py  test_integration.py  test_judge.py  test_pool.py  test_smoke.py  test_stats.py  test_storage.py  test_types.py
