[project]
name = "model-arena"
version = "0.1.0"
description = "Local multi-model best-of-N competition framework"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25",
    "aiosqlite>=0.20",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
